# compactlib-DIA

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  RELEASE_NOTES_v1.0.3.md  pyproject.toml
.github/workflows/: ci.yml
compactlib/: cli.py  combine.py  controls.py  digest.py  io.py  mass.py  presets.py  progress.py  report.py  rt.py  rt_predictors.py  selection.py  transition_filters.py
compactlib/predictors/: __init__.py  base.py  koina.py  mock.py
compactlib_toy_example/: inspect_toy_outputs.py  toy_ms2pip_full.tsv
docs/: chunked_prediction.md  development_notes.md  full_workflow.md  postprocessing.md  presets.md  rt_deeplc.md  troubleshooting.md
examples/: 01_max7.sh  02_union14.sh  03_consensus7.sh  04_toy_demo.sh  05_digest_toy.sh  06_digest_mox_predict_mock.sh  07_predict_koina_prosit.sh  08_predict_koina_ms2pip.sh  09_digest_with_precursor_filters.sh  10_presets_demo.sh  11_digest_selenocysteine.sh  12_predict_chunked_koina.sh  13_add_rt_demo.sh  14_predict_rt_deeplc.sh  15_build_one_command.sh  README_toy.md  toy.fasta  toy_prosit_full.tsv
tests/: test_basic.py  test_version_metadata.py
